[tool.poetry]
name = "fetch_cache"
version = "0.1.0"
description = "An HTTP client with multiple cache backends to optimize repeated request performance"
keywords = ["http", "cache", "httpx", "db", "sql", "redis", "mongo", "django"]
authors = ["'fkl' <18654198191@163.com>"]
readme = "README.md"
packages = [{include = "fetch_cache"}]
license = "MIT"
keywords = ["excel", "pdf", "converter"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
homepage = "https://github.com/xiwen-haochi/fetch_cache"
repository = "https://github.com/xiwen-haochi/fetch_cache"

[tool.poetry.dependencies]
python = ">=3.8"
httpx = ">=0.22.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
pytest-cov = "^4.1.0"
respx = "^0.21.1"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.24.0"
redis = "^5.2.0"
python-dotenv = "^1.0.1"
sqlalchemy = "^2.0.36"
pymysql = "^1.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
asyncio_mode = "auto"
addopts = "-v --cov=fetch_cache --cov-report=term-missing"
